--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,13 +205,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "neg_pids_dup = neg_pids * 10\n",
-    "\n",
+    "import utils\n",
+    "reload(utils)\n",
     "from utils import split_train, hole_dzdataset, sen_parse\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -235,13 +236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "A\n",
       "A\n"
      ]
     }
@@ -252,7 +254,7 @@
     "from utils import split_train, hole_dzdataset, sen_parse, collate_fn\n",
     "from imp import reload\n",
     "\n",
-    "'''\n",
+    "\n",
     "with open(\"train_pos\",'r',encoding='utf-8') as fW:\n",
     "    train_pos = [s.split() for s in fW.readlines()]\n",
     "with open(\"test_pos\",'r',encoding='utf-8') as fW:\n",
@@ -261,7 +263,7 @@
     "    train_neg = [s.split() for s in fW.readlines()]\n",
     "with open(\"test_neg\",'r',encoding='utf-8') as fW:\n",
     "    test_neg = [s.split() for s in fW.readlines()]\n",
-    "'''\n",
+    "\n",
     "seg = pkuseg.pkuseg(model_name='web')\n",
     "train_dataset = hole_dzdataset(train_pos, train_neg, 16, model)\n",
     "test_dataset = hole_dzdataset(test_pos, test_neg, 16, model)\n",
@@ -278,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,42 +296,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils import lstm_model\n",
-    "\n",
-    "the_lstm = lstm_model(300, 16)\n",
-    "optimizer = torch.optim.SGD(the_lstm.parameters(), lr = 0.01, momentum = 0.9)\n",
-    "loss_fn = torch.nn.MSELoss(reduce=False, size_average=False)\n",
-    "\n",
-    "for epoch in range(500):\n",
-    "    for i,(x,lens,y) in enumerate(train_dataloader):\n",
-    "        optimizer.zero_grad()\n",
-    "        y_predict = the_lstm(x, lens)\n",
-    "        loss = loss_fn(y_predict, y)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A\n"
+      "start train\n",
+      "epoch: 0 0.9039963942307693 time: 520.5856945514679\n",
+      "epoch: 1 0.9070737317639257 time: 492.98219299316406\n",
+      "epoch: 2 0.9076436090848806 time: 494.2607092857361\n",
+      "epoch: 3 0.9089025198938993 time: 491.58807706832886\n",
+      "epoch: 4 0.908840351458886 time: 496.4952869415283\n",
+      "epoch: 5 0.9083896303050398 time: 495.4669532775879\n",
+      "epoch: 6 0.910746850132626 time: 490.3245837688446\n",
+      "epoch: 7 0.9109696203580901 time: 506.41914892196655\n",
+      "epoch: 8 0.9100163710212201 time: 494.80792474746704\n",
+      "epoch: 9 0.90920300066313 time: 492.5889320373535\n",
+      "epoch: 10 0.9143008123342176 time: 501.9008071422577\n",
+      "epoch: 11 0.9143422579575596 time: 493.60408210754395\n",
+      "epoch: 12 0.9084725215517241 time: 494.1197991371155\n",
+      "epoch: 13 0.9156115301724138 time: 495.11815786361694\n",
+      "epoch: 14 0.9142127403846154 time: 495.6083562374115\n",
+      "epoch: 15 0.9157773126657824 time: 504.98693013191223\n",
+      "epoch: 16 0.9145650281830239 time: 495.20422649383545\n",
+      "epoch: 17 0.9163471899867374 time: 491.61608719825745\n",
+      "epoch: 18 0.9188805537135278 time: 502.4019603729248\n",
+      "epoch: 19 0.9193105520557029 time: 493.25163531303406\n",
+      "epoch: 20 0.9201135610079576 time: 492.0724308490753\n",
+      "epoch: 21 0.9201653680371353 time: 499.1234323978424\n",
+      "epoch: 22 0.9202586206896551 time: 495.04952025413513\n",
+      "epoch: 23 0.9204347645888594 time: 493.4907703399658\n",
+      "epoch: 24 0.9224966843501327 time: 501.79414415359497\n",
+      "epoch: 25 0.9220666860079576 time: 492.46727323532104\n",
+      "epoch: 26 0.9223309018567639 time: 503.61249899864197\n",
+      "epoch: 27 0.9234084880636605 time: 495.42502212524414\n",
+      "epoch: 28 0.924895349801061 time: 494.7117667198181\n",
+      "epoch: 29 0.9258900447612732 time: 504.38460969924927\n",
+      "epoch: 30 0.9269261853448276 time: 490.67395186424255\n",
+      "epoch: 31 0.9261853448275862 time: 490.4900710582733\n",
+      "epoch: 32 0.9291072612732095 time: 492.00023770332336\n",
+      "epoch: 33 0.929620150862069 time: 491.6860635280609\n",
+      "epoch: 34 0.9325161637931034 time: 492.2290632724762\n",
+      "epoch: 35 0.9335315815649867 time: 491.19139552116394\n",
+      "epoch: 36 0.9292471402519894 time: 491.72365641593933\n",
+      "epoch: 37 0.9350443468169761 time: 495.5855724811554\n",
+      "epoch: 38 0.9338838693633952 time: 494.9828357696533\n",
+      "epoch: 39 0.9389091511936339 time: 492.6358332633972\n",
+      "epoch: 40 0.9351997679045093 time: 492.91374611854553\n",
+      "epoch: 41 0.9421833554376657 time: 489.95621252059937\n",
+      "epoch: 42 0.9428464854111406 time: 493.79790925979614\n",
+      "epoch: 43 0.9443281664456233 time: 492.5072069168091\n",
+      "epoch: 44 0.9456958720159151 time: 493.0438964366913\n",
+      "epoch: 45 0.9496539290450928 time: 493.351279258728\n",
+      "epoch: 46 0.9466594827586207 time: 490.7735333442688\n",
+      "epoch: 47 0.9507056117374005 time: 491.5254409313202\n",
+      "epoch: 48 0.9504983836206896 time: 494.6311538219452\n",
+      "epoch: 49 0.9519178962201591 time: 493.4129297733307\n",
+      "epoch: 50 0.9153939406498673 time: 491.20488023757935\n",
+      "epoch: 51 0.9435355188992043 time: 494.6754903793335\n",
+      "epoch: 52 0.9479235742705571 time: 491.46409344673157\n",
+      "epoch: 53 0.9528866876657824 time: 501.282249212265\n",
+      "epoch: 54 0.9530472894562334 time: 497.91064405441284\n",
+      "epoch: 55 0.9553993285809018 time: 503.5518090724945\n",
+      "epoch: 56 0.9534824685013262 time: 505.39708828926086\n",
+      "epoch: 57 0.9552283653846154 time: 500.37536358833313\n",
+      "epoch: 58 0.9569224552387268 time: 500.0077714920044\n",
+      "epoch: 59 0.9584248590848806 time: 504.87406301498413\n",
+      "epoch: 60 0.9601603945623343 time: 493.48286652565\n",
+      "epoch: 61 0.9594454575596817 time: 501.56131625175476\n",
+      "epoch: 62 0.9580725712864722 time: 508.0958433151245\n",
+      "epoch: 63 0.9578601624668435 time: 505.7980525493622\n",
+      "epoch: 64 0.960346899867374 time: 512.1056814193726\n",
+      "epoch: 65 0.9604453332228117 time: 504.28079056739807\n",
+      "epoch: 66 0.9597200348143236 time: 490.23025727272034\n",
+      "epoch: 67 0.9601396717506632 time: 485.9716143608093\n",
+      "epoch: 68 0.9611084631962865 time: 488.117582321167\n",
+      "epoch: 69 0.9603520805702918 time: 487.81907749176025\n",
+      "epoch: 70 0.9622793020557029 time: 490.47109270095825\n",
+      "epoch: 71 0.9601137682360743 time: 483.8638331890106\n",
+      "epoch: 72 0.962253398541114 time: 489.7888379096985\n",
+      "epoch: 73 0.9623984582228117 time: 485.35369658470154\n",
+      "epoch: 74 0.9618544844164456 time: 487.15311098098755\n",
+      "epoch: 75 0.9638024287135278 time: 484.34898948669434\n",
+      "epoch: 76 0.9626056863395226 time: 485.1056218147278\n",
+      "epoch: 77 0.9621446037798409 time: 484.26999139785767\n",
+      "epoch: 78 0.9628336372679045 time: 489.6720676422119\n",
+      "epoch: 79 0.9627559267241379 time: 490.58010601997375\n",
+      "epoch: 80 0.9624761687665783 time: 486.75601744651794\n",
+      "epoch: 81 0.9622585792440318 time: 491.5339334011078\n",
+      "epoch: 82 0.9621342423740054 time: 489.1367826461792\n",
+      "epoch: 83 0.9637558023872679 time: 490.8164713382721\n",
+      "epoch: 84 0.9620150862068966 time: 488.13503646850586\n",
+      "epoch: 85 0.9631133952254642 time: 489.81779050827026\n",
+      "epoch: 86 0.9617612317639257 time: 488.9844846725464\n",
+      "epoch: 87 0.9633154426392573 time: 488.6844127178192\n",
+      "epoch: 88 0.9638645971485411 time: 493.59363436698914\n",
+      "epoch: 89 0.9639164041777188 time: 490.5197184085846\n",
+      "epoch: 90 0.9623259283819628 time: 490.42121982574463\n",
+      "epoch: 91 0.964253149867374 time: 489.60773038864136\n",
+      "epoch: 92 0.9641236322944297 time: 488.45850682258606\n",
+      "epoch: 93 0.9626989389920424 time: 493.71665930747986\n",
+      "epoch: 94 0.9635848391909815 time: 492.6818325519562\n",
+      "epoch: 95 0.9635537549734748 time: 493.8318588733673\n",
+      "epoch: 96 0.9635226707559682 time: 492.82059240341187\n",
+      "epoch: 97 0.9623103862732095 time: 492.92100191116333\n",
+      "epoch: 98 0.9636262848143236 time: 494.3678500652313\n",
+      "epoch: 99 0.9630305039787799 time: 496.105623960495\n"
      ]
     }
    ],
    "source": [
+    "from imp import reload\n",
+    "import utils\n",
+    "reload(utils)\n",
+    "import time\n",
+    "from utils import lstm_model, test_eval\n",
+    "train_dataset,test_dataset,train_dataloader,test_dataloader = torch.load(\"../data_and_loaders\")\n",
+    "train_dataloader.num_workers = 0\n",
+    "test_dataloader.num_workers = 0\n",
+    "the_lstm = lstm_model(300, 16)\n",
+    "the_lstm = the_lstm.cuda()\n",
+    "optimizer = torch.optim.SGD(the_lstm.parameters(), lr = 0.01, momentum = 0.9)\n",
+    "loss_fn = torch.nn.MSELoss()\n",
+    "print(\"start train\")\n",
+    "\n",
+    "since = time.time()\n",
+    "for epoch in range(100):\n",
+    "    the_lstm.train()\n",
+    "    for i,(x,lens,y) in enumerate(train_dataloader):\n",
+    "        optimizer.zero_grad()\n",
+    "        y_predict = the_lstm(x, lens)\n",
+    "        loss = loss_fn(y_predict, y.cuda())\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "    print(\"epoch:\", epoch, test_eval(test_dataloader, the_lstm), \"time:\", time.time()-since)\n",
+    "    since = time.time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#reload(utils)\n",
     "#from utils import split_train, hole_dzdataset, sen_parse\n",
     "#ds = hole_dzdataset([['贵校','隔壁','保研'],['信科','保研','百讲']], [['清华','北大'],['中华','人民','共和国']], 2, model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(the_lstm, 'lstm_1112')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "lstm_model(\n",
+       "  (rnn): LSTM(300, 300)\n",
+       "  (score): Sequential(\n",
+       "    (0): Linear(in_features=300, out_features=10, bias=True)\n",
+       "    (1): ReLU(inplace=True)\n",
+       "    (2): Linear(in_features=10, out_features=2, bias=True)\n",
+       "    (3): Softmax(dim=None)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "the_lstm"
    ]
   },
   {
