--- a/statistics.ipynb
+++ b/statistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,30 +65,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import utils\n",
-    "#reload(utils)\n",
     "from utils import sen_parse\n",
     "import pkuseg\n",
+    "import collections\n",
     "\n",
-    "pos_months = []\n",
-    "neg_months = []\n",
-    "pos_hours = []\n",
-    "neg_hours = []\n",
-    "pos_wordlen = []\n",
-    "neg_wordlen = []\n",
-    "pos_textlen = []\n",
-    "neg_textlen = []\n",
-    "\n",
-    "seg = pkuseg.pkuseg(model_name='web')\n"
+    "seg = pkuseg.pkuseg(model_name='web')\n",
+    "word_counter = collections.Counter()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,19 +88,22 @@
     "pos_hours = []\n",
     "pos_wordlen = []\n",
     "pos_textlen = []\n",
+    "pos_word_counter = collections.Counter()\n",
     "for posid in pos_pids:\n",
     "    hole = holes[posid]\n",
     "    pos_months.append(hole['time']['month'])\n",
     "    pos_hours.append(hole['time']['hour'])\n",
     "    words = sen_parse(hole['dz_text'], seg)\n",
     "    pos_textlen.append(len(words))\n",
+    "    word_counter.update(words)\n",
+    "    pos_word_counter.update(words)\n",
     "    words = [len(w) for w in words if len(w)<9]\n",
-    "    pos_wordlen.append(sum(words)/len(words) if len(words)>0 else -0.5)"
+    "    pos_wordlen.append(sum(words)/len(words) if len(words)>0 else -0.5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,14 +111,17 @@
     "neg_hours = []\n",
     "neg_wordlen = []\n",
     "neg_textlen = []\n",
+    "neg_word_counter = collections.Counter()\n",
     "for negid in neg_pids:\n",
     "    hole = holes[negid]\n",
     "    neg_months.append(hole['time']['month'])\n",
     "    neg_hours.append(hole['time']['hour'])\n",
     "    words = sen_parse(hole['dz_text'], seg)\n",
     "    neg_textlen.append(len(words))\n",
+    "    word_counter.update(words)\n",
+    "    neg_word_counter.update(words)\n",
     "    words = [len(w) for w in words if len(w)<9]\n",
-    "    neg_wordlen.append(sum(words)/len(words) if len(words)>0 else -0.5)"
+    "    neg_wordlen.append(sum(words)/len(words) if len(words)>0 else -0.5)\n"
    ]
   },
   {
@@ -399,7 +397,9 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -449,6 +449,78 @@
     "plt.subplot(133)\n",
     "probability_distribution(data=neg_textlen2, bins_interval=5, title='Dz_text Length Distribution(Normal+Deleted, clipped by 100)')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['的', '了', '我', '不', '？', '是', '有', '吗', '在', '一', '想', '！', '啊', '都', '你', '人', '就', '也', '没有', '会', '和', '好', '什么', '一个', '很', '自己', '能', '要', '求问', '可以', '没', '还', '个', '去', '上', '说', '大家', '怎么', '看', '他', '喜欢', '给', '知道', '还是', '真的', '呢', '不是', '到', '吧', '求', '老师', '被', '感觉', '这', '呀', '太', '现在', '觉得', '过', '出', '时候', '着', '又', '有人', '一下', '多', '～', 'dz', '同学', '两', '对', '为什么', '：', '、', '里', '但是', '做', '她', '学校', '得', '找', '请问', '一起', '来', '但', '今天', '把', '如果', '洞', '这个', '让', '再', '树洞', '就是', '课', '问', '次', '用', '与', '时间']\n",
+      "['的', '了', '我', '不', '？', '是', '有', '吗', '在', '一', '想', '！', '啊', '都', '你', '人', '就', '也', '没有', '会', '和', '好', '什么', '一个', '很', '自己', '能', '要', '求问', '可以', '没', '还', '个', '去', '上', '大家', '说', '怎么', '看', '他', '喜欢', '给', '知道', '还是', '真的', '呢', '不是', '到', '吧', '求', '老师', '被', '感觉', '这', '呀', '太', '现在', '觉得', '过', '时候', '出', '着', '又', '有人', '一下', '多', '～', 'dz', '两', '同学', '对', '为什么', '：', '里', '、', '但是', '做', '她', '学校', '得', '请问', '找', '一起', '来', '但', '今天', '把', '如果', '洞', '这个', '让', '课', '再', '树洞', '就是', '问', '次', '用', '与', '万']\n",
+      "['的', '了', '我', '不', '是', '有', '你', '？', '！', '一', '想', '红包', '在', '支付宝', '吗', 'Y', 'P', 'M', 'T', 'E', '就', '都', '人', '个', '也', '没有', '和', '还', '啊', '打开', '到', '被', '块', '能', '一个', '好', '要', '吧', '说', '可以', '什么', '自己', '会', '他', '很', '搜', '没', '首', '张', '领', '约', '页', '可', '几', '出', '去', '这', '搜索', 'dz', '大', '首页', '给', '、', '来', '上', '真的', '余额宝', '知道', '看', '：', '不是', '怎么', '～', '她', '4886662', '着', '大家', '不等', '又', '呢', '哦', '把', '领红', '同学', '包', '树洞', '再', '这个', '现在', '里', '两', '找', '傻逼', '小姐姐', '几十', '就是', '对', '过', '北大', '让']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([p[0] for p in word_counter.most_common(100)])\n",
+    "print([p[0] for p in pos_word_counter.most_common(100)])\n",
+    "print([p[0] for p in neg_word_counter.most_common(100)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'势力', '孙殿咏', '姐想', '校友', '周年', '二层', '开房', 'ᴗ⁍', '领高', '留q', '屎', '附赠', '⁄⁄', '🐎', '华票', '三好', '代刷', '8745145', '丝袜', '充卡', 'md', '大半夜', '调教', '议价', '求代', 'bb', '撸', '放松', '充校', '长票', '真t', '深圳', '9796935', '禁言', '不等', '群众', '活好', '抵制', '人气', '转账', '公开', '可领', '~~~', '521262335', '⁎⁍', '浏览器', '证据', '不怕', '亲友', '黑人', '变现', '金龙鱼', '融资', 'j', '军队', '内场', 'yx', '掌门', '用于', 'diss', '屁', '马克思主义', '10亿', '**', '👉', '2829299986', '抽', '玩意', '♀', '游行', '5月', '快感', '年终', '700', '删除', '4886662', '删帖', '花掉', '圣诞', '金逸伦', 'jb', '标兵', '517595046', '扫码', '748581791', '每日', '舔', '嘻', '毕业典', '撒钱', '正义', '514312722', '翻墙', '头号', '艹', '畜生', '礼票', '敲', '510740607', '24日', 'XX', '他妈的', '一发', 'y', 'sm', '大额', 'mmp', '加q', '中上', '重大', '领几', '余额宝', '72', '544135675', '邱', '淘宝👈', '装逼', '纪念', '炮友', '早日', 'cnm', '小号', 'PK', '施工', '復·制', 'cm', 'hyt', '芳华', '偿代', '立即', '马会', '主席', 'pb', '礼家', '攒', '511099028', '书记', '教观', '̴̛', '佳票', '人品', '报道', 'z♂', '抗议', '拉拉队', '我国', '高潮', '600', 'nmsl', '领到', '园卡', '妈死', '有约', '男约', '3536322', '即日', '咑閞', '文爱', '操你妈', '充值', '部队', 'nm', '1月', 'tmd', 'zw', '姐约', '马云', '首页', '74', '洗地', '1日', '根根', '⁎', '玩意儿', '小受', '操', '赢能量', '生理', '三点', '民主', '专享', 'jwsl', '成员', '企鹅', '去世', '800', '啪啪啪', '抵扣', '人口', '工人', '婊', '场票', '想约', '即', '大💰', '领红', '38楼', '代跑', '滚', '聊骚', '姐来', '几十', '$后', '婊子', '额外', 'mh', '羞羞'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(set([p[0] for p in neg_word_counter.most_common(1500)])-set([p[0] for p in pos_word_counter.most_common(3000)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'马云', '孙殿咏', '10亿', '年终', '4886662', '立即', '附赠', '标兵', '他妈', '三好', '攒', '每日', '毕业典', '充卡', '撒钱', '企鹅', '长票', '礼票', '校长', '不等', '领到', '人气', '转账', '3536322', '可领', '领红', '代跑', '余额宝', '🐴', '金龙鱼', '妈的', '首页'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(set([p[0] for p in neg_word_counter.most_common(500)])-set([p[0] for p in word_counter.most_common(2500)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'系列', '三观', '五道口', '孤单', '明确', '上传', '变化', '差别', '闭卷', '鼓励', '隔', '智能'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(set([p[0] for p in pos_word_counter.most_common(2500)])-set([p[0] for p in word_counter.most_common(2500)]))"
    ]
   },
   {
